Skyline export tool uses the crosslink specific format instead of mapping crosslinks into linear peptides